<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleTweets</string>
    <string name="login_label">Connect with Twitter</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_body">body</string>
    <string name="label_compose">What\'s happening?</string>
    <string name="label_submit">Post</string>
    <string name="label_time">Time...</string>
    <string name="label_count">140</string>
    <string name="title_activity_profile">Profile</string>

</resources>